--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,99 @@
 body {
     margin: 0;
+    background-color: #FAF8F1;
 }
 
 h1 {
     margin-top: 0;
+    font-family: 'Roboto', sans-serif;
+    color: #251749;
 }
+
+hr {
+    border: dotted;
+    border-bottom: none;
+    width: 4%;
+    color: #495579;
+}
+
+p {
+    font-family: 'Merriweather', serif;
+}
+
+
+a {
+    text-decoration: none;
+    padding: 1rem;
+    color: #495579;
+}
+
+a:hover {
+    color: #FAF8F1;
+}
+
+
 
 .top-div {
     height: 200px;
     width: 200px;
+    margin: 100px auto 0 auto;
 }
 
 .middle-div {
     height: 200px;
     width: 200px;
+    margin: 100px auto 0 auto;
+
 }
 
-.bottom-div{
-    height: 200px;
-    width: 200px;
+.introduction {
+    padding: 1rem;
+}
+
+.my-skills {
+    font-family: 'Roboto', sans-serif;
+    margin: 100px auto 0 auto;
+}
+
+.bottom-div {
+    margin: 100px auto 0 auto;
+    
+}
+
+.btn {
+    background: #251749;
+    background-image: -webkit-linear-gradient(top, #251749, #251749);
+    background-image: -moz-linear-gradient(top, #251749, #251749);
+    background-image: -ms-linear-gradient(top, #251749, #251749);
+    background-image: -o-linear-gradient(top, #251749, #251749);
+    background-image: linear-gradient(to bottom, #251749, #251749);
+    -webkit-border-radius: 9;
+    -moz-border-radius: 9;
+    border-radius: 9px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #495579;
+    background-image: -webkit-linear-gradient(top, #495579, #495579);
+    background-image: -moz-linear-gradient(top, #495579, #495579);
+    background-image: -ms-linear-gradient(top, #495579, #495579);
+    background-image: -o-linear-gradient(top, #495579, #495579);
+    background-image: linear-gradient(to bottom, #495579, #495579);
+    text-decoration: none;
+  }
+
+.footer{
+    background-color: #251749;
+    height: 3rem;
+    margin: 100px auto 0 auto;
+}
+
+.copyright {
+    font-size: 0.6rem;
+    color: #FAF8F1;
 }
